static/css/olClass.css
.slider-summary a{color:#219ba1;}
.slider-summary a:link{color:#219ba1;}
/* slider */
.js-slider-trigger{float:left;position:absolute;bottom:10px;right:185px;}
.js-slider-trigger li{float:left;margin-right:6px;}
.js-slider-trigger .active a{background:#aaa}
.js-slider-trigger li a{   transition: background 0.4s ease-in-out;border-radius:10px;padding:5px;background:#fff;float:left}
p{word-break:break-all}
.course {overflow: hidden;}
.course h2{margin-right:25px;padding:10px 25px;background: #219ba1;float: left;font-size: 26px;border-radius: 40px;}
.course h2 a {
    color:#fff;
}
.course h2 i {font-size: 32px;margin-left:10px;position:relative;top:2px;}
.course .description{margin:30px 0;}
.course .description p{ float: left;margin-top:14px;color:#aaa;}

.windows{
    display: none;
    position:fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    z-index: 99999;}

.course .list{width: 100%;float: left;margin-top:30px;}
.course .last{margin-right: 0px !important;}
.course .list li{cursor:pointer; background:#fff;position:relative;width:180px;margin-right:64px;padding:10px;margin-bottom:50px;height: 74px;border:1px solid #219ba1;border-radius: 10px;}
.course .list li h3{font-size: 20px;color:#219ba1;}
.course .list li p{overflow: hidden;height:35px; margin-top:7px;color: #aaa;font-size: 12px;}
.course .list i {
    position:absolute;
    right:-48px;
    top:30px;
    color:#219ba1;
    font-size:32px;
}
.course .list .fa-arrow-left {
    left:-48px;
    right:auto;
}
.course .list li:last-child i {
    display:none;
}
.course .list .bottom {
    position:absolute;
    right:82px;
    top:103px;
    color:#219ba1;
}

.slider {
	position:relative;
	margin-top:10px;
}
.slider-trigger li {
	position:relative;
	margin-bottom:5px;
	font-size:0;
	cursor:pointer;
}

.slider-trigger li:last-child {
	margin-bottom:0;
}
.slider-sheet {
	position:relative;
	height:370px;
	width:615px;
	margin-left:5px;
}
.slider-sheet li {
	position:absolute;
	top:0;
	left:0;
	right:0;
	bottom:0;
	opacity:0;
	transition:opacity 0.4s ease-in-out;
    z-index:0;
}
.slider-sheet img {
	float:left;
	opacity:0;
	transition:opacity 0.4s ease-in-out;
}
.slider-summary {
	float:left;
	width:170px;
	height:175px;
	padding:5px 0 5px 5px;
	margin-left:5px;
	word-break:break-all;
	border-top:solid 1px #f0f0f0;
	background-color:#fff;
    overflow: hidden;
}
.slider-summary li {
    font-size:12px;
    /*
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    */
}
.slider-summary li a {
    color:#219ba1;
}
.slider-sheet img + .slider-summary {
	border-top:0;
}
.slider-summary p:first-child {
	font-size:18px;
	margin-bottom:10px;
}
.slider-trigger .active:after {
	opacity:0;
}
.slider-sheet .active {
	opacity:1;
    z-index:1;
}
.slider-sheet .active img {
	opacity:1;
}

/* tab */
.tab {
	margin-top:50px;
    margin-bottom:100px;
}
.tab-trigger li:hover,
.tab-trigger .active {
	border-bottom:5px solid #219ba1;
	font-weight:700;
}
.tab-sheet {
	position:relative;
}
.tab-sheet > li {
	position:absolute;
	left:0;
	top:0;
	opacity:0;
}
.tab-sheet .active {
	opacity:1;
}

